[gd_scene load_steps=2 format=3 uid="uid://equipment_slot"]

[ext_resource type="Script" path="res://src/ui/equipment_slot.gd" id="1_equip_slot"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_slot"]
bg_color = Color(0.2, 0.2, 0.25, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.5, 1)

[node name="EquipmentSlot" type="PanelContainer"]
layout_mode = 2
script = ExtResource("1_equip_slot")
slot_type = 0
slot_size = 64
theme_override_styles/panel = SubResource("StyleBoxFlat_slot")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="ItemIcon" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5
visible = false

[node name="PlaceholderRect" type="ColorRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
visible = false

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Slot"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DurabilityBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false
visible = false
